--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -1,10 +1,11 @@
 .card {
+  padding: 0;
   color: rgba(34, 34, 34, 0.702);
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 14rem;
+  width: 13rem;
 }
 
 .temp {
@@ -21,37 +22,38 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   font-weight: 500;
 }
 
 .names {
+  padding: 0;
   display: flex;
-  font-weight: 500;
-  font-size: 1.1rem;
-  margin-left: 1.5rem;
+  font-weight: 400;
+  font-size: 1.4rem;
+  margin-left: 1.2rem;
 }
 
 .card > img {
-  display: flex;
-  flex-direction: column;
-  margin-top: 0.5rem;
   justify-content: center;
   text-align: center;
   justify-items: center;
+  padding: 0;
+  width: 25%;
+  height: 14%;
 }
 
 .primary {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 5vh 15vh;
-  width: 25rem;
+  width: 20rem;
   padding: 0 0.5rem;
   
 }
 .primary > img {
-  width: 13rem;
-  height: 13rem;
+  width: 11rem;
+  height: 11rem;
   margin-bottom: 4.5rem;
   margin-left: -1rem;
   margin-right: -1rem;
@@ -63,13 +65,12 @@
 }
 
 .primary > span {
-  display: flex;
   justify-content: center;
   text-align: center;
   margin-top: 0.7rem;
   grid-column: 1 / span 2;
   font-size: 2.3rem;
-  margin-left: 7rem;
+  margin-left: 9.5rem;
   font-weight: 700;
 }
 
