--- a/src/components/Card.module.css
+++ b/src/components/Card.module.css
@@ -15,12 +15,14 @@
   margin-right: 0.5rem;
   justify-content: center;
   text-align: center;
+  padding-left: 1rem;
 }
 
 .temps {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  margin-right: 1rem;
   align-items: center;
   margin-bottom: 1rem;
   font-weight: 500;
@@ -47,21 +49,20 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 5vh 15vh;
-  width: 20rem;
-  padding: 0 0.5rem;
-  
+  width: 25rem;
 }
 .primary > img {
   width: 11rem;
   height: 11rem;
   margin-bottom: 4.5rem;
-  margin-left: -1rem;
+  margin-left: 1.6rem;
   margin-right: -1rem;
 }
 
 .primary > div{
   font-size: 1.5rem;
-  font-weight: 700;
+  font-weight: 500;
+
 }
 
 .primary > span {
@@ -70,7 +71,7 @@
   margin-top: 0.7rem;
   grid-column: 1 / span 2;
   font-size: 2.3rem;
-  margin-left: 9.5rem;
+  margin-left: 12.4rem;
   font-weight: 700;
 }
 
